<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">

    <Button android:id="@+id/scanCode"
            android:text="@string/additem_scan_code_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
    </Button>
    
    <Button android:id="@+id/coverPhoto"
            android:text="@string/additem_cover_photo_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"></Button>
    
    <EditText android:id="@+id/titleBox"
              android:hint="@string/additem_textbox_title"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:maxLength="255"
              android:lines="1">
    </EditText>



</LinearLayout>
